--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="container">
-        sodhaflais
+        <h1 class="mb-4">New Article</h1>
+
+        <form action="/articles" method="POST">
+            <%- include('_form_fields') %>
+        </form>
     </div>
 </body>
 </html>
