--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -4,17 +4,17 @@
         <form>
           <div class="form-group">
             <label for="title">Title</label>
-            <input required type="text" name="title" id="title" class="form-control">
+            <input value="<%= article.title %>"required type="text" name="title" id="title" class="form-control">
           </div>
   
           <div class="form-group">
             <label for="description">Description</label>
-            <textarea name="description" id="description" class="form-control" rows="4"></textarea>
+            <textarea name="description" id="description" class="form-control" rows="4"> <%= article.description %> </textarea>
           </div>
   
           <div class="form-group">
             <label for="markdown">Markdown</label>
-            <textarea name="markdown" id="markdown" class="form-control" rows="6"></textarea>
+            <textarea required name="markdown" id="markdown" class="form-control" rows="6"> <%= article.markdown %> </textarea>
           </div>
   
           <div class="text-center">
